test: strengthen core parser contracts
Rewrite base CosId exception, constant, accessor, annotation, and definition parser tests around observable contracts and failure paths. Harden CompositeFieldDefinitionParser so null parser results are treated as misses like IdDefinition.NOT_FOUND.